--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-.App {
-  text-align: center;
+.TabConfirmed{
+  height: 150px;
+  width: 200px;
+  border-radius: 15px;
+  margin-left: 30px;
+  display:inline-block;
+  justify-Content: 'center';
+  text-align:'center';
+  border-radius: 10px;
+    border-width: 5px;
+    border-color: black;
+    border-style: solid;
+    font-weight: bold;
+    background-color:rgb(240, 236, 11)
+}
+.TabDeaths{
+  height: 150px;
+  width: 200px;
+  border-radius: 15px;
+  margin-left: 30px;
+  display:inline-block;
+  justify-Content: 'center';
+  text-align:  'center';
+  border-radius: 10px;
+    border-width :5px;
+    border-color:rgb(2, 2, 2);
+    border-style: solid;
+    font-weight: bold;
+    background-color:rgb(241, 7, 7)
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.TabRecovered{
+  height: 150px;
+  width: 200px;
+  border-radius: 15px;
+  margin-left: 30px;
+  display:inline-block;
+  justify-Content: 'center';
+  text-align:  'center';
+  border-radius: 10px;
+    border-width: 5px;
+    border-color: rgb(7, 7, 6);
+    border-style: solid;
+    font-weight: bold;
+    background-color:rgb(15, 250, 7)
 }
